# ohmu

./: CMakeLists.txt  README.txt  TODO.txt  cfgtest.ohmu  clang_integrate.diff  diff_clang_source_files.sh  pull_clang_source_files.sh  push_clang_source_files.sh  temp.ohmu
cmake/modules/: FindReadline.cmake
docs/: Makefile  conf.py  index.rst  make.bat
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.txt
src/: CMakeLists.txt  DefaultLexer.h  Lexer.cpp  Token.cpp
src/backend/: CMakeLists.txt
src/backend/jagger/: debug.cpp  event.cpp  fromtil.cpp  instructionstream.cpp  interface.h  print.cpp  regalloc.cpp  types.h  util.h  x64alloc.cpp  x64event.h
src/backend/llvm/: CMakeLists.txt  IRGen.cpp  IRGen.h
src/backend/x64builder/: CMakeLists.txt  instr.h  instrbuilder.h  x64builder.cpp
src/base/: ArrayTree.h  CMakeLists.txt  DenseMap.h  DiagnosticEmitter.h  LLVMDependencies.h  MemRegion.cpp  MemRegion.h  MutArrayRef.h  NestedStack.h  SimpleArray.h  Util.h
src/clang/: CMakeLists.txt  ClangCFGWalker.h  ClangTranslator.cpp  ClangTranslator.h  README.txt  diff_clang_source_files.sh  pull_clang_source_files.sh  push_clang_source_files.sh
src/clang/Analysis/: CMakeLists.txt
src/clang/Analysis/Analyses/: CMakeLists.txt  ThreadSafetyCompare.h  ThreadSafetyOps.def  ThreadSafetyPrint.h  ThreadSafetyTIL.cpp  ThreadSafetyTIL.h  ThreadSafetyTraverse.h  ThreadSafetyType.h  ThreadSafetyUtil.h
src/grammar/: CMakeLists.txt  coreLanguage.grammar  ohmu.grammar  parser.grammar  sexpr.grammar
src/jagger/: codegen.cpp  instructionstream.cpp  print.cpp  types.h
src/lsa/: BuildCallGraph.cpp  BuildCallGraph.h  CMakeLists.txt  GraphComputation.h  GraphDeserializer.h  GraphSerializer.h  StandaloneGraphComputation.h  StandaloneRunner.h
src/lsa/examples/: CMakeLists.txt  EscapeAnalysis.cpp  EscapeAnalysis.h  ExampleOhmuComputation.h  SCCComputation.cpp  SCCComputation.h
src/ohmu/: cfg_test_cases.ohmu  cfgtest.ohmu  literalTest.ohmu  test_cfg.ohmu  test_dependent_functions.ohmu  test_loop.ohmu  test_module.ohmu  test_scalartypes.ohmu  test_ssa.ohmu
src/ohmu/examples/: argument_dependencies.ohmu
src/parser/: ASTNode.cpp  ASTNode.h  BNFParser.cpp  BNFParser.h  CMakeLists.txt  DefaultLexer.cpp  DefaultLexer.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  ParserBuilder.h  TILParser.cpp  TILParser.h  Token.cpp  Token.h  Util.h
src/test/: CMakeLists.txt  Driver.h  run_test_lsa.sh  test_BNFParser.cpp  test_TILParser.cpp  test_base.cpp  test_compare.cpp  test_llvm.cpp  test_lsa.cpp  test_parser.cpp  test_serialization.cpp  test_visitor.cpp
src/test/backend/: CMakeLists.txt
src/test/base/: CMakeLists.txt
src/test/lsa/: CMakeLists.txt  escape_analysis.cpp  generate_callgraph.cpp  globals_analysis.cpp  run_test_lsa.sh  scc_analysis.cpp  test_input_callgraph.cpp  test_input_escape.cpp  test_input_global_vars.cpp  test_input_scc.cpp
src/test/parser/: CMakeLists.txt  test_BNFParser.cpp  test_parser.cpp
src/test/til/: CMakeLists.txt  test_copier.cpp  test_serialization.cpp  test_visitor.cpp
src/til/: Annotation.h  AnnotationImpl.cpp  AnnotationImpl.h  AttributeGrammar.h  Bytecode.cpp  Bytecode.h  CFGBuilder.cpp  CFGBuilder.h  CFGReducer.cpp  CFGReducer.h  CMakeLists.txt  CopyReducer.cpp  CopyReducer.h  DiagnosticEmitter.h  Evaluator.h  Global.cpp  Global.h  InplaceReducer.cpp  InplaceReducer.h  README.txt  SSAPass.cpp  SSAPass.h  Scope.cpp  Scope.h  TIL.cpp  TIL.h  TILAnnKinds.def  TILBaseType.h  TILCompare.h  TILDependencies.h  TILOps.def  TILPrettyPrint.h  TILTraverse.h  TILValueType.h  TILVisitor.h  ThreadSafetyTIL.cpp  ThreadSafetyTIL.h  ThreadSafetyTraverse.h  ThreadSafetyUtil.h  TypedEvaluator.cpp  (+4 more)
src/til/clang/: ThreadSafetyUtil.cpp
src/unittests/: CMakeLists.txt
src/unittests/lsa/: BuildCallGraphTest.cpp  CMakeLists.txt  SCCComputationTest.cpp  StandaloneGraphComputationTest.cpp
src/x64builder/: CMakeLists.txt  args.h  instr.h  instrbuilder.h  template.cpp  x64builder.cpp
